--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-group-routes": "^1.1.0",
     "express-validator": "^7.1.0",
     "md5": "^2.3.0",
+    "mongoose": "^8.4.1",
     "mysql2": "^3.10.0"
   }
 }
