--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "expressjs",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "express-validator": "^7.1.0",
     "md5": "^2.3.0",
     "mongoose": "^8.4.1",
-    "mysql2": "^3.10.0"
+    "mysql2": "^3.10.0",
+    "serverless-http": "^3.2.0"
   }
 }
