--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "md5": "^2.3.0",
     "moment": "^2.30.1",
     "mongoose": "^8.4.1",
-    "mysql2": "^3.10.0"
+    "mysql2": "^3.10.0",
+    "nanoid": "^5.1.5",
+    "socket.io": "^4.8.1"
   }
 }
